syntax = "proto3";
package proto;
import "shared.proto";
import "google/protobuf/wrappers.proto";



service ProductService{
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
    rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
    rpc AddProductCategories(AddProductCategoriesRequest) returns (UpdateProductResponse);
    rpc AddProductVariations(AddProductVariationsRequest) returns (AddProductVariationsResponse);
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    string unit = 3;
    string shopId = 4;
    repeated string categoryIds = 5;
    repeated string variations = 6;
    repeated ImageArg images = 7;
}

message ImageData {
    ImageArg metaData = 1;
    string url = 2;
    string method = 3;
}
message ProductData {
    string id = 1;
    string name = 2;
    string description = 3;
    string unit = 4;
    string shopId = 5;
    repeated string categoryIds = 6;
    repeated string variations = 7;
    repeated ImageData images = 8;
}
message CreateProductResponse {
    ProductData data = 1;
    Status status = 2;
}
message UpdateProductRequest {
    string id = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue description = 3;
    google.protobuf.StringValue unit = 4;
}
message UpdateProductResponse {
    ProductData data = 1;
    Status status = 2;
}

message AddProductCategoriesRequest {
    string productId = 1;
    repeated string newCategoryIds = 2;
}
message AddProductCategoriesResponse {
    ProductData data = 1;
    Status status = 2;
}
message AddProductVariationsRequest {
    string productId = 1;
    repeated string newVariations = 2;
}
message AddProductVariationsResponse {
    ProductData data = 1;
    Status status = 2;
}
